--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+html, body {
+  height: 100%;
+  width: 100%;
+} 
+
 .App {
   text-align: center;
 }
@@ -8,7 +13,6 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
